// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table addDel 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit2"
        >
          Edit
        </button>
      </table-buttons>
    </table-item>
  </table-table>
</div-page>
`;

exports[`Table clears missing slot 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table confirms & clears list 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table confirms & clears list 2`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Confirm
  </button>
</div-page>
`;

exports[`Table confirms & clears list 3`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enables a slot 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
      <column-header>
        ColC
      </column-header>
      <column-header>
        ColD
      </column-header>
      <column-header>
        ColE
      </column-header>
      <column-header>
        ColF
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <column-text>
        2001/01/01
      </column-text>
      <column-text>
        c1
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonColE1"
        >
          1/a1
        </button>
      </table-buttons>
      <column-text>
        -
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <column-text>
        2002/01/01
      </column-text>
      <column-text>
        c2
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonColEA2"
        >
          A2/a2
        </button>
      </table-buttons>
      <column-text>
        B2
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonEditA2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDelA2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        <input
          data-testid="inputColA"
          value="a"
        />
      </column-text>
      <column-set>
        <div>
          <input
            data-testid="inputColB1"
            type="checkbox"
          />
           
          c1
        </div>
      </column-set>
      <column-text>
        <input
          data-testid="inputColC"
          value="2000/01/01"
        />
      </column-text>
      <column-text>
        <input
          data-testid="inputColD"
          value=""
        />
      </column-text>
      <column-text />
      <column-text>
        <input
          data-testid="inputColF"
          value=""
        />
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonSave"
        >
          Save
        </button>
        <button
          data-testid="buttonCancel"
        >
          Cancel
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 2`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
      <column-header>
        ColC
      </column-header>
      <column-header>
        ColD
      </column-header>
      <column-header>
        ColE
      </column-header>
      <column-header>
        ColF
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <column-text>
        2001/01/01
      </column-text>
      <column-text>
        c1
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonColE1"
        >
          1/a1
        </button>
      </table-buttons>
      <column-text>
        -
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <column-text>
        2002/01/01
      </column-text>
      <column-text>
        c2
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonColEA2"
        >
          A2/a2
        </button>
      </table-buttons>
      <column-text>
        B2
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonEditA2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDelA2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        <input
          data-testid="inputColA"
          value="a3"
        />
      </column-text>
      <column-set>
        <div>
          <input
            data-testid="inputColB1"
            type="checkbox"
          />
           
          c1
        </div>
      </column-set>
      <column-text>
        <input
          data-testid="inputColC"
          style="background: red;"
          value="2022-01-04"
        />
      </column-text>
      <column-text>
        <input
          data-testid="inputColD"
          value=""
        />
      </column-text>
      <column-text />
      <column-text>
        <input
          data-testid="inputColF"
          value=""
        />
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonSave"
        >
          Save
        </button>
        <button
          data-testid="buttonCancel"
        >
          Cancel
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 3`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
      <column-header>
        ColC
      </column-header>
      <column-header>
        ColD
      </column-header>
      <column-header>
        ColE
      </column-header>
      <column-header>
        ColF
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <column-text>
        2001/01/01
      </column-text>
      <column-text>
        c1
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonColE1"
        >
          1/a1
        </button>
      </table-buttons>
      <column-text>
        -
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <column-text>
        2002/01/01
      </column-text>
      <column-text>
        c2
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonColEA2"
        >
          A2/a2
        </button>
      </table-buttons>
      <column-text>
        B2
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonEditA2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDelA2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a3
      </column-text>
      <column-set>
        -
      </column-set>
      <column-text>
        2022/01/04
      </column-text>
      <column-text>
        c1
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonColE3"
        >
          3/a3
        </button>
      </table-buttons>
      <column-text>
        -
      </column-text>
      <table-buttons>
        <button
          data-testid="buttonEdit3"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel3"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 4`] = `
<p
  data-testid="msg"
/>
`;

exports[`Table enters row into list 5`] = `
<p
  data-testid="msg"
>
  ColE - 3/a3
</p>
`;

exports[`Table import export 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
  <div>
    <button
      data-testid="buttonImport.csv"
    >
      Import 
      .csv
    </button>
  </div>
  <div>
    <button
      data-testid="buttonExport.csv"
    >
      Export 
      .csv
    </button>
  </div>
</div-page>
`;

exports[`Table import export 2`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
  <div>
    <button
      data-testid="buttonImport.csv"
    >
      Import 
      .csv
    </button>
  </div>
  <div>
    <button
      data-testid="buttonExport.csv"
    >
      Export 
      .csv
    </button>
    <div
      style="border: 1px solid orange; margin: .5em;"
    >
      <button
        data-testid="buttonExportAccept.csv"
      >
        Accept
      </button>
      <h4>
        A.csv
      </h4>
      <pre
        style="overflow: scroll; white-space: pre-wrap;"
      >
        id,aa,ab,ac
1,a1,1,2001/01/01
2,a2,,2002/01/01,1
      </pre>
    </div>
  </div>
</div-page>
`;

exports[`Table inlineHeaders 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-item>
      <table-row
        style="display: block;"
      >
        <column-header>
          ColA
        </column-header>
        <div>
          <column-text>
            a1
          </column-text>
        </div>
      </table-row>
      <table-row
        style="display: block;"
      >
        <column-header>
          ColB
        </column-header>
        <div>
          <column-set>
            <div>
              c1
            </div>
          </column-set>
        </div>
      </table-row>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    data-testid="buttonPrev"
  >
    Prev
  </button>
  <button
    data-testid="buttonNext"
  >
    Next
  </button>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    data-testid="buttonPrev"
  >
    Prev
  </button>
  <button
    data-testid="buttonNext"
  >
    Next
  </button>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 1`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    data-testid="buttonPrev"
  >
    Prev
  </button>
  <button
    data-testid="buttonNext"
  >
    Next
  </button>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 2`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <p>
    2
     - 
    2
     of 
    2
  </p>
  <button
    data-testid="buttonPrev"
  >
    Prev
  </button>
  <button
    data-testid="buttonNext"
  >
    Next
  </button>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 3`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a2
      </column-text>
      <column-set>
        -
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit2"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel2"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <p>
    2
     - 
    2
     of 
    2
  </p>
  <button
    data-testid="buttonPrev"
  >
    Prev
  </button>
  <button
    data-testid="buttonNext"
  >
    Next
  </button>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 4`] = `
<div-page
  data-testid="tableA"
>
  <table-table>
    <table-header>
      <column-header>
        ColA
      </column-header>
      <column-header>
        ColB
      </column-header>
    </table-header>
    <table-item>
      <column-text>
        a1
      </column-text>
      <column-set>
        <div>
          c1
        </div>
      </column-set>
      <table-buttons>
        <button
          data-testid="buttonEdit1"
        >
          Edit
        </button>
        <button
          data-testid="buttonDel1"
        >
          Del
        </button>
      </table-buttons>
    </table-item>
  </table-table>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    data-testid="buttonPrev"
  >
    Prev
  </button>
  <button
    data-testid="buttonNext"
  >
    Next
  </button>
  <button
    data-testid="buttonAdd"
  >
    Add
  </button>
  <button
    data-testid="buttonClear"
  >
    Clear
  </button>
</div-page>
`;
